Fix overflow in input-group

--- a/app/javascript/css/utilities/forms.css
+++ b/app/javascript/css/utilities/forms.css
@@ -65,5 +65,5 @@ select.form-control:focus {
 }
 
 .input-group .form-control {
-  @apply m-0 border-none bg-white;
+  @apply m-0 border-none bg-white overflow-hidden;
 }
